RFI troubleshooting and testing

--- a/ai-ml-predictive-models/config.json
+++ b/ai-ml-predictive-models/config.json
@@ -1,3 +1,3 @@
 {
-  "mlbraw_data_output_dir": "ai-ml-predictive-models/src/models/sports/baseball/mlb/data/raw"
+  "sports_baseball_mlb_raw_data_output_dir": "F:/Dropbox/1_Work/Development/GitHub/Fluidity1337/ai-ml-predictive-models/ai-ml-predictive-models/data/sports/baseball/mlb/raw"
 }
