--- a/config.json
+++ b/config.json
@@ -2,6 +2,6 @@
   "mlb_base_path": "F:/Dropbox/1_Work/Development/GitHub/Fluidity1337/ai-ml-predictive-models/data/sports/baseball/mlb/",
   "mlb_raw_data_path": "F:/Dropbox/1_Work/Development/GitHub/Fluidity1337/ai-ml-predictive-models/data/sports/baseball/mlb/raw",
   "mlb_api_path": "F:/Dropbox/1_Work/Development/GitHub/Fluidity1337/ai-ml-predictive-models/data/sports/baseball/mlb/data_sources/api",
-  "mlb_tests_path": "F:/Dropbox/1_Work/Development/GitHub/Fluidity1337/ai-ml-predictive-models/assets/test_output/mlb/rfi",
+  "mlb_test_output_path": "F:/Dropbox/1_Work/Development/GitHub/Fluidity1337/ai-ml-predictive-models/test_output",
   "mlb_tests_path": "F:/Dropbox/1_Work/Development/GitHub/Fluidity1337/ai-ml-predictive-models/data/sports/baseball/mlb/data_sources/api"
 }
