--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,18 @@
-# pyproject.toml
 [build-system]
-requires = ["setuptools>=61.0", "wheel"]
+requires    = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "mlb_rfi"
-version = "0.1.0"
+name         = "mlb"
+version      = "0.1.0"
 dependencies = [
   "requests>=2.0",
+  "pandas>=1.0",
 ]
+
+[project.optional-dependencies]
+tests = ["pytest>=7.0"]
+
+[tool.setuptools.packages.find]
+where   = ["src"]
+include = ["*"]
