--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
   ],
   "python.testing.autoTestDiscoverOnSaveEnabled": true,
   "python.testing.pytestEnabled": true,
-  "python.envFile": "${workspaceFolder}/.env"
+  "python.envFile": "${workspaceFolder}/.env",
+  "python.analysis.autoImportCompletions": true
 }
