--- a/config/config.yaml
+++ b/config/config.yaml
@@ -6,8 +6,8 @@ root_path: 'F:/Dropbox/1_Work/Development/GitHub/Fluidity1337/ai-ml-predictive-m
 log_path: 'F:/Dropbox/1_Work/Development/GitHub/Fluidity1337/ai-ml-predictive-models/logs'
 cache_path: 'F:/Dropbox/1_Work/Development/GitHub/Fluidity1337/ai-ml-predictive-models/.cache'
 
-
 mlb_data:
+  nrfi_websheet_ds: /data/baseball/mlb/raw/mlb_daily_
   base_path:   data/baseball/mlb/
   raw:         data/baseball/mlb/raw
   interim:     data/baseball/mlb/interim
