--- a/config/config.yaml
+++ b/config/config.yaml
@@ -8,13 +8,14 @@ cache_path: 'F:/Dropbox/1_Work/Development/GitHub/Fluidity1337/ai-ml-predictive-
 
 mlb_data:
   nrfi_websheet_ds: /data/baseball/mlb/raw/mlb_daily_
-  base_path:   data/baseball/mlb/
-  raw:         data/baseball/mlb/raw
-  interim:     data/baseball/mlb/interim
-  test_output: test_output
-  statcast:    data/baseball/mlb/raw/statcast/statcast_{lookback}d_raw.csv
-  api:         data/sports/baseball/mlb/data_sources/api
-  test_output: 'F:/Dropbox/1_Work/Development/GitHub/Fluidity1337/ai-ml-predictive-models/test_output' 
+  base_path:    data/baseball/mlb/
+  raw:          data/baseball/mlb/raw
+  game_schedule: data/baseball/mlb/raw/game_schedule
+  interim:      data/baseball/mlb/interim
+  test_output:  test_output
+  statcast:     data/baseball/mlb/raw/statcast/statcast_{lookback}d_raw.csv
+  api:          data/sports/baseball/mlb/data_sources/api
+  test_output:  'F:/Dropbox/1_Work/Development/GitHub/Fluidity1337/ai-ml-predictive-models/test_output' 
   outputs_path: data/baseball/mlb/outputs
   season: 2025
   use_cache: true
