--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,11 @@ version      = "0.1.0"
 dependencies = [
   "requests>=2.0",
   "pandas>=1.0",
+  "scikit-learn",
+  "ace_tools",
 ]
+
+requires-python = ">=3.8,<3.12"
 
 [project.optional-dependencies]
 tests = ["pytest>=7.0"]
@@ -16,5 +20,3 @@ tests = ["pytest>=7.0"]
 [tool.setuptools.packages.find]
 where   = ["src"]
 include = ["*"]
-
-#add scikit-learn, ace_tools
