data engineering: sqlite, postgres migratin, django and flask evaluation, config updates

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
-PYTHONPATH=.
+PYTHONPATH=./src
+MLB_POC_DB=./data/mlb_sqllite.db
+MLB_RAW_PATH=./data/baseball/mlb/raw
+
+# .env (added to .gitignore)
